fix: correct layout issues to improve responsiveness on small screens

--- a/static/style.css
+++ b/static/style.css
@@ -152,16 +152,27 @@ box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     font-size: 1rem;
   }
 }
-@media (max-width: 1200px) {
-#weather-fetch{
-    font-size: 25px;
-    
-}}
-.card-title{
-    display: flex;
+
+.card-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  flex-wrap: wrap; 
+}
+
+@media (max-width: 600px) {
+  .card-title {
+    gap: 1rem;
+    justify-content: flex-start; 
+  }
+}
+@media (max-width: 430px) {
+  .card-title {
+    gap: .5rem;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 3rem;
+  }
 }
 .responsive-icon {
     width: 8%;
@@ -169,9 +180,9 @@ box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     stroke: #c9cacc;
     fill: #c9cacc;
 }
-@media (max-width: 480px) {
+@media (max-width: 430px) {
   .responsive-icon {
-    width: 10%;
+    display: none;
   }
 }
 
@@ -224,38 +235,38 @@ button{
 }
 button:hover{
     background-color: rgba(105, 96, 96, 0.883);
+    color: white;
 }
 .temp-section{
     width: 100%;
     font-size: 1rem;
-      border-radius: 40px;
-
+    border-radius: 40px;
     padding-block: 1rem;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
-
 }
+
 /* images of dogs */
 #dog_2 {
-  width: clamp(180px, 70%, 500px);
+  width: clamp(180px, 18%, 500px);
   height: auto;
   display: block;
   margin: 0 auto;
 }
 
 #dog_1{
-  width: clamp(130px, 60%, 470px);
+  width: clamp(130px, 18%, 470px);
   height: auto;
   display: block;
   margin: 0 auto;      
 }
 #dog_3{
-  width: clamp(100px, 50%, 450px);
+  width: clamp(100px, 18%, 450px);
   height: auto;
   display: block;
   margin: 0 auto;      
 }
 #dog_5{
-  width: clamp(140px, 60%, 470px);
+  width: clamp(140px, 18%, 470px);
   height: auto;
   display: block;
   margin: 0 auto;       
@@ -289,7 +300,7 @@ button:hover{
     }
 }
 .card-section{
-    width: 12rem; 
+    width: 15rem;
     background: rgba(255, 255, 255, 0.365);
     backdrop-filter: blur(10px);             
     border-radius: 40px;
